hphp/hack/test/typecheck/nonnull/unconstrained_abstract_type_constant.php
<?hh

abstract class C {
  abstract const type T;

  public function f(this::T $x): nonnull {
    return $x;
  }
}
